      lexicons
    - Adapted cluster unit database layout to conform to flite 1.1
      format
    - Adapted cluster unit selection to conform to new database
      layout
    - Upgraded 16khz diphone database with Flite 1.1 data.
    - Added support for duration shrinking/stretching at the segment
      level.
    - Added support for pitch shift adjustments at the segment level.
    - More sophisticated phrasing CARTS.
    - PostLexicalAnalyzer now deals with "'ve" and "'ll"
    - Some refactoring of the FeatureProcessors
    - A number of new Feature processors have been added.
    - Added ASCII file support for Pronounceable finite state machines
    - Expanded tokenizer. New features include:
	1) processing abbreviations (e.g. U.S.A.)
	2) 7-digit phone numbers,
	3) partial phone numbers
	4) time (e.g. 12:35)
	5) digits w/ dashes (e.g. 999-999-999)
	6) Roman numerals (e.g. IV)
	7) St Andrew's St.
	8) US Money (e.g. $14.53)
	9) "80s" or "70s"
	10) fractions (e.g. 3/4)
	11) US states (e.g. NH, MA)

    - Improved rules for generating binary forms of the databases
    - Specifies 'Locale.US' (instead of null) when constructing a 
      SynthesizerModeDesc in the demo codeA
    - Output of regression tests are more consistent



January  16, 2002 V1.1.	  - New ClusterUnitDatabase layout for festvox
                            compatibility.
                            Incorporated DurationStretch code 
			    ContourGenerator. All tests still pass.
			    FeatureFunction updates
January   8, 2002 V1.0.5  - Fixed Locale.US problem in JSAPI demos.
January   8, 2002 V1.0.4  - Fixed speech.properties path message in demos.
			  - Added SourceForge news to docs front page.
December 21, 2001 V1.0.3  - Added .bat files for win32 demos
December 20, 2001 V1.0.2  - Added jsapi.exe - win32 jsapi installer
December 20, 2001 V1.0.1  - Added jsapi.sh - unix jsapi installer
December 14, 2001 V1.0    - First public release
November  7, 2001 V0.9    - Internal Test Release
